# crazyflow_MARL

./: .gitignore  LIA_MADDPG.md  LIA_MADDPG.tex  README.md  pyproject.toml
examples/: eval_lia_maddpg.py  train_lia_maddpg.py  train_ppo.py
marl/: __init__.py  lia.py  maddpg.py  networks.py  replay_buffer.py  utils.py
marl/envs/: __init__.py  task_allocation.py
